[gd_scene load_steps=5 format=3 uid="uid://bmv518npd614e"]

[ext_resource type="Script" path="res://obstacle_pair.gd" id="1_ae70w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4w42"]
size = Vector2(148, 1282)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_heapi"]
size = Vector2(150, 1276)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ovxkm"]
a = Vector2(0, 1312)

[node name="ObstaclePair" type="Node2D"]
script = ExtResource("1_ae70w")

[node name="TopObstacle" type="StaticBody2D" parent="."]
position = Vector2(0, -748)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopObstacle"]
position = Vector2(75, 641)
shape = SubResource("RectangleShape2D_o4w42")

[node name="ColorRect" type="ColorRect" parent="TopObstacle"]
offset_right = 150.0
offset_bottom = 1282.0
color = Color(1, 0, 0, 1)

[node name="BottomObstacle" type="StaticBody2D" parent="."]
position = Vector2(0, 919)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomObstacle"]
position = Vector2(75, 638)
shape = SubResource("RectangleShape2D_heapi")

[node name="ColorRect" type="ColorRect" parent="BottomObstacle"]
offset_right = 150.0
offset_bottom = 1278.0
color = Color(1, 0, 0, 1)

[node name="ScoreTrigger" type="Area2D" parent="."]
position = Vector2(0, -22)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreTrigger"]
position = Vector2(155, 2)
shape = SubResource("SegmentShape2D_ovxkm")

[connection signal="body_exited" from="ScoreTrigger" to="." method="_on_score_trigger_body_exited"]
